--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,15 @@
 {
-  "name": "Brooks Term Sort — Price Action Abbreviations",
-  "short_name": "Term Sort",
-  "description": "Master Al Brooks' 607 price action trading abbreviations through interactive category sorting",
-  "start_url": "/index.html",
+  "name": "Al Brooks Price Action Terminologies Trainer — Master 600+ Trading Abbreviations",
+  "short_name": "Al Brooks Terminologies",
+  "description": "Master Al Brooks' 600+ price action trading terminologies through interactive category sorting with spaced repetition",
+  "start_url": "/al-brooks-pa-terms-trainer/",
   "display": "standalone",
   "background_color": "#0a0e1a",
   "theme_color": "#0a0e1a",
   "orientation": "portrait",
   "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" },
-    { "src": "icon.svg", "sizes": "any", "type": "image/svg+xml" }
+    { "src": "/al-brooks-pa-terms-trainer/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/al-brooks-pa-terms-trainer/icon-512.png", "sizes": "512x512", "type": "image/png" },
+    { "src": "/al-brooks-pa-terms-trainer/icon.svg", "sizes": "any", "type": "image/svg+xml" }
   ]
 }
